# axum_tutorial

./: .gitignore  Cargo.toml  README.md
migrations/: 20260521020940_users.sql  20260522075841_add_password_hash_to_users.sql
src/: auth.rs  errors.rs  lib.rs  main.rs
src/handlers/: errors.rs  user.rs
src/handlers/user/: crud.rs  jwt.rs  mod.rs  session.rs
src/models/: user.rs
