[package]
name = "axum_tutorial"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "macros"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5.3", features = ["buffer", "limit"] }
tower-http = { version = "0.6.11", features = ["cors", "limit", "timeout"] }
tracing = "0.1.44"
